Fixed text overflow for description and labels for small screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,18 +4,15 @@
 	font-family: 'Work Sans', sans-serif;
 }
 
-.package {
-	overflow-wrap: anywhere;
-}
-
 .description, .package, .label {
 
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	overflow-wrap: anywhere;
 }
 
 body {
